reformatted code further

--- a/controller.html
+++ b/controller.html
@@ -13,11 +13,11 @@
     <div id="paddle" style="top: 10px;"></div>
 
     <div id="top-bar">
-        <a href="index.html" class="home"><i class="fa fa-arrow-left"></i></a>
+        <a href="index.html" id="home-arrow"><i class="fa fa-arrow-left"></i></a>
     </div>
     <div id="container">
         <p>Use the device's orientation to move the paddle left and right.</p>
-        <button id="start">Start</button>
+        <button class="button" id="start">Start</button>
     </div>
 
 
