--- a/gameplay.html
+++ b/gameplay.html
@@ -15,15 +15,15 @@
     <div id="score"></div>
 
     <div id="top-bar">
-        <a href="index.html" class="home"><i class="fa fa-arrow-left"></i></a>
-        <button id="stop">Stop</button>
+        <a href="index.html" id="home-arrow"><i class="fa fa-arrow-left"></i></a>
+        <button class="button" id="stop">Stop</button>
     </div>
     <div id="container">
         <p id="info"> Link your mobile device to control the paddle and try stop the ball hitting the bottom!</p>
         <h2 id="score-info"></h2>
-        <button id="start">Start Game</button>
-        <label for="slider">Paddle Speed: <span id="speed-value"></span></label>
-        <input type="range" min="1" max="10" value="5.5" step="0.1" id="slider">
+        <button class="button" id="start">Start Game</button>
+        <label id="speed-label" for="slider">Paddle Speed: <span id="speed-value"></span></label>
+        <input type="range" min="1" max="10" value="5.5" step="0.1" id="speed-slider">
     </div>
 
     <script src="gameplay.js" type="module"></script>
