added icon to wabpage

--- a/controller.html
+++ b/controller.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Controller</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -13,7 +14,7 @@
     <div id="paddle" style="top: 10px;"></div>
 
     <div id="top-bar">
-        <a href="index.html" id="home-arrow"><i class="fa fa-arrow-left"></i></a>
+        <a href="selector.html" id="home-arrow"><i class="fa fa-arrow-left"></i></a>
     </div>
     <div id="container">
         <p>Use the device's orientation to move the paddle left and right.</p>
