--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
             <div id="qr-code"></div>
         </div>
         <h2 id="score-info"></h2>
-        <button class="button" id="start">Start Game</button>
-        <label id="speed-label" for="slider">Paddle Speed: <span id="speed-value"></span></label>
-        <input type="range" min="1" max="10" value="5.5" step="0.1" id="speed-slider">
+        <div id="hidden">
+            <div id="slider-container">
+                <label id="speed-label" for="slider">Paddle Speed: <span id="speed-value"></span></label>
+                <input type="range" min="1" max="10" value="5.5" step="0.1" id="speed-slider">
+            </div>
+            <button class="button" id="start">Start Game</button>
+        </div>
     </div>
 
     <script src="gameplay.js" type="module"></script>
