added ball to logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="button" id="stop">Stop</button>
     </div>
     <div id="container">
-        <h1>Bouncing Ball</h1>
+        <h1>B<span id="logo"><img src="favicon.svg"></span>uncing Ball</h1>
         <div id="instructions">
             <div>
                 <h2>Instructions:</h2>
